@@ -1,4 +1,5 @@
-OpenVi 7.0.15 -> OpenVi 7.1.16: Wed Mar 9 15:10:58 2022
+OpenVi 7.0.15 -> OpenVi 7.1.16: Thu Mar 10 9:13:27 2022
+        + Add support for illumos; tested on OpenIndiana Hipster 2022.03
         + Add support for NetBSD; tested on NetBSD/amd64 9.2-stable with
           the system provided GCC and Clang from binary packages; compiling
           `CC=clang LTO=1` requires the LLVM LLD linker `ld.lld` installed
